test/testproject/static/css/imagestore.css
@import url('https://fonts.googleapis.com/css?family=Oxygen&display=swap');

.wrapper {
    display: flex;
    width: 100%;
    /* align-items: stretch; */
    font-family: 'Oxygen', sans-serif;
}

#sidebar-button {
  width: 20px;
  height: 100vh;
  position: fixed;
  top: 0;
  background-color: #333333;
  color: #e9ecef;
}

.navbar {
  font-family: 'Oxygen', sans-serif;
}

#navbarNav ul li a:hover {
  color: #A31F34; /* maroon */
}

/*------------------------SIDEBAR STYLE------------------------*/

#sidebar {
    width: 250px;
    position: fixed;
    top: 0;
    left: -250px;
    height: 100vh;
    z-index: 999;
    background: gainsboro;
    color: #333333;
    transition: all 0.3s;
    overflow-y: scroll;
    font-size: 18px;
    border-right: #e9ecef;
    border-right-style: solid;
    border-right-width: .1em;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    /* full screen */
    width: 100vw;
    height: 100vh;
    /* transparent black */
    background: rgba(0, 0, 0, 0.7);
    /* middle layer, i.e. appears below the sidebar */
    z-index: 998;
    opacity: 0;
    /* animate the transition */
    transition: all 0.5s ease-in-out;
}
/* display .overlay when it has the .active class */
.overlay.active {
    display: block;
    opacity: 1;
}

#dismiss {
    width: 35px;
    height: 35px;
    position: absolute;
    /* top right corner of the sidebar */
    top: 10px;
    right: 10px;
    line-height: 35px;
    text-align: center;
    /* background-color: #e9ecef; */
    cursor: pointer;
    -webkit-transition: all 0.3s;
    -o-transition: all 0.3s;
    transition: all 0.3s;
}

#dismiss:hover {
    color: #A31F34;
}

#open-sidebar {
  position: fixed;
  top: 120px;
  left: 0px;
  z-index: 997;
}

#open-sidebar:hover {
    /* color: #A31F34; */
}

#sidebar.active {
    left: 0;
}

@media (max-width: 768px) {
    #sidebar {
        margin-left: -250px;
    }
    #sidebar.active {
        margin-left: 0;
    }
    .navbar .navbar-collapse {
    text-align: center;
    }
}

#sidebar .sidebar-header {
    padding: 10px;
    color: #333333;
}

#sidebar ul.components {
    /* padding: 5px; */
    /* border-bottom: 1px solid #47748b; */
}

/* #sidebar ul p {
    color: #fff;
    padding: 5px;
} */

#sidebar ul li {
    padding-left: 15px;
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 0.95em;
    /* display: block; */
}

#sidebar ul li a {
    padding: 0px 0px;
    font-size: 1em;
    color: #A31F34;
    /* color: #fff; */
    /* display: block; */
}

#sidebar ul li a:hover {
    color: #A31F34;
    /* background: #363636; */
    text-decoration: none;
}

#sidebar ul li:hover {
    color: #A31F34;
    background: #e9ecef;
}

a[data-toggle="collapse"] {
    position: relative;
}

.dropdown-toggle::after {
  display: none;
}

/*----------------END SIDEBAR STYLE----------------*/

/* .content{
  padding: 20px;
} */

#content {
    width: 100%;
    padding: 40px;
    /* min-height: 100vh; */
    transition: all 0.3s;
    /* position: absolute;
    top: 0;
    right: 0; */
}

#category-list li {
    background: #ff9999;
    font-size: 120%;
    padding-bottom: 15px;
}

#category-list {
    padding-bottom: 10px;
}

#controls {
    font-size: 90%;
    padding-top: 10px;
}

#controls .controls-group {
    padding-top: 10px;
}

$breadcrumb-divider: quote(">");

hr {
    clear:both;
}

.image-description {
    padding: 10px 0 10px 0;
}

.navigation {
    text-align: center;
    padding: 0 0 10px 0;
    font-size: 110%;
}

.navigation .next-link {
    margin-left: 100px;
}

img.current {
    border: 1px red solid;
}

#image-view img.preview {
    display: block;
    margin: 0 auto 0 auto;
}

#image-view {
    margin-right: 300px;
}

.album-list .album {
    width: 160px;
    height: 250px;
    float: left;
    padding: 5px;
    margin: 10px;
    overflow: hidden;
}

.album-name {
    width: 100%;
    text-align: center;
}

.album-user {
    width: 100%;
    text-align: center;
    font-size: 80%;
    color: #0092FF;
}

.album-head {
    height: 150px;
    width: 150px;
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    /* background-image:url('imgnotfound.png');
    width:400px; */
}

.album-head a {
    text-align: center;
}

.user-info {
    padding: 20px 0;
}

.image-preview {
    float: left;
    width: 150px;
    /* padding: 5px; */
    /* padding-left: 2px;
    padding-right: 2px; */
    padding-top: 3px;
    height: 150px;
    /* display: table-cell; */
    overflow: hidden;
}

.image-preview .image-title {
    font-size: 80%;
    padding-left: 2px;
    padding-right: 2px;
    line-height: 1;
}

.extra-fields {
    font-size: 80%;
    margin: 10px 0;
}

.extra-fields label {
    color: #666666;
}

.basic-fields, .extra-fields {
    display: block;
    float: left;
}

.pagination .disabled {
    display: none;
}

body {
    background-color: gainsboro;
    /* padding-top: 10px;
    padding-right: 10px;
    padding-left: 10px; */
    line-height: 1.25;

    }

    a,

    a:visited { color: #A31F34; text-decoration: none; }

    a:hover { text-decoration: underline }

    h1 { line-height: 1.25; margin: 0 0 10px; font-size: 40px; font-weight: bold; }

    h1 a,

    h1 a:visited { color: #333333 }

    h1 a:hover { color: #A31F34; text-decoration: none; }

    p { color: #333333; font-size: 14px; font-weight: 300; line-height: 1.25; margin-bottom: 0px; }


    a.read-more { background-color: #A31F34; border: 1px solid #333333; border-radius: 3px 3px 3px 3px; box-shadow: 0 0 1px #93291b inset; color: #f5f5f5; padding: 5px; }

    a.read-more:hover { background-color: #be3523; border-radius: 3px 3px 3px 3px; text-decoration: none; }
    strong {font-weight:bold;}

